# xiaohongshu-helper

./: .gitignore  CHANGELOG.md  README.md  index.html  package.json  pnpm-lock.yaml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/browser_data/: .com.google.Chrome.fFhXvu  ChromeFeatureState  Local State  RunningChromeVersion  SingletonCookie  SingletonLock  SingletonSocket
src-tauri/browser_data/Default/: BrowsingTopicsState  Cookies  DIPS  DIPS-wal  Favicons  History  Network Persistent State  Preferences  Reporting and NEL  Secure Preferences  Top Sites  TransportSecurity  Web Data
src-tauri/browser_data/Default/DawnGraphiteCache/: data_1  index
src-tauri/browser_data/Default/DawnWebGPUCache/: data_1  index
src-tauri/browser_data/Default/Extension Rules/: LOG
src-tauri/browser_data/Default/Extension Scripts/: LOG
src-tauri/browser_data/Default/Extension State/: LOG  LOG.old
src-tauri/browser_data/Default/GCM Store/: LOG  LOG.old
src-tauri/browser_data/Default/GPUCache/: data_1  index
src-tauri/browser_data/Default/Session Storage/: LOG  LOG.old
src-tauri/browser_data/Default/Sessions/: Session_13414667954024365  Session_13414668038997717  Tabs_13414667938177934  Tabs_13414668013675331
src-tauri/browser_data/Default/Site Characteristics Database/: LOG  LOG.old
src-tauri/browser_data/Default/WebStorage/: QuotaManager  QuotaManager-journal
src-tauri/browser_data/Default/shared_proto_db/: LOG  LOG.old
src-tauri/browser_data/GrShaderCache/: data_1  index
src-tauri/browser_data/GraphiteDawnCache/: data_1  index
src-tauri/browser_data/ShaderCache/: data_1  index
src-tauri/browser_data/segmentation_platform/: ukm_db
src-tauri/capabilities/: default.json
src-tauri/src/: api_server.rs  lib.rs  main.rs
src-tauri/src/ai/: mod.rs
src-tauri/src/analytics/: mod.rs
src-tauri/src/auth/: mod.rs
src-tauri/src/automation/: mod.rs
src-tauri/src/mcp/: mod.rs
src-tauri/src/model/: mod.rs
src-tauri/src/storage/: mod.rs  sqlite.rs
src-tauri/src/util/: logging.rs  utils.rs
src-tauri/tests/: hot_info_test.rs  log.rs
(+340 files in other folders)
